# MBa117xL.SW.MCU.BSP

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  license.bsd3.md
cmake/: flags_macros.cmake  target.cmake
dependencies/: .gitignore  replace_include_guards.py
dependencies/TQdevices/: M24C64.c  M24C64.h  MX25R1635F.c  MX25R1635F.h  NAFE1388B40BS.c  NAFE1388B40BS.h  NAFE1388B40BS_REGISTERS.h  PCA9555BS.c  PCA9555BS.h  PCF85063ATL.c  PCF85063ATL.h  SE97BTP.c  SE97BTP.h
dependencies/TQdevices/NXP_API/: DP83867.c  DP83867.h
dependencies/TQdevices/NXP_API/flexcan_api/: flexcan_api.cmake  flexcan_api.h
dependencies/TQdevices/NXP_API/i2c_api/: i2c_api.cmake  i2c_api.h
dependencies/TQdevices/NXP_API/lpi2c_api/: lpi2c_api.h
dependencies/TQdevices/NXP_API/lpspi_api/: lpspi_api.cmake  lpspi_api.h
dependencies/TQdevices/NXP_API/lpuart_api/: lpuart_api.cmake  lpuart_api.h
dependencies/TQdevices/NXP_API/utils/: TQ_utils.c  TQ_utils.h  tq_utils.cmake
doxy/: .gitignore  Doxyfile  pages.dox
examples/: CMakeLists.txt  README.md
examples/board/: MBa117xL.SW.PQ.mex  MBa117xL.SW.mex  MIMXRT1176xxxxx_cm7_ram.ld  TQMa117xL_flexspi_nor_config.c  TQMa117xL_flexspi_nor_config.h  board.c  board.h  clock_config.c  clock_config.h  dcd.c  pin_mux.c  pin_mux.c.bak  pin_mux.h  pin_mux.h.bak
examples/board/PMIC/: PMIC.c  PMIC.h
examples/board/cmake/: flags.cmake  global_config.cmake  global_include.cmake
examples/board/ethernet/: demo_ethernet.h  lwipopts.h
examples/demo_PMIC/: CMakeLists.txt  README.md  demo_PMIC.c  demo_PMIC.h
examples/demo_RTC/: CMakeLists.txt  README.md  config.cmake  demo_RTC.c  demo_RTC.h
examples/demo_SE97BTP/: CMakeLists.txt  README.md  demo_SE97BTP.c  demo_SE97BTP.h
examples/demo_afe/: CMakeLists.txt  README.md  demo_afe.c  demo_afe.h
examples/demo_digital_io/: CMakeLists.txt  README.md  demo_digital_io.c  demo_digital_io.h
examples/demo_display_dsi/: CMakeLists.txt  README.md  config.cmake  demo_display_dsi.c  demo_display_dsi.h  display_support.c
examples/demo_display_lvds/: CMakeLists.txt  FreeRTOSConfig.h  README.md  config.cmake  demo_display_lvds.c  demo_display_lvds.h  display_support.c  display_support.h
examples/demo_eeprom/: CMakeLists.txt  README.md  config.cmake  demo_eeprom.c  demo_eeprom.h
examples/demo_ethernet/: CMakeLists.txt  README.md  config.cmake  demo_ethernet.c  demo_ethernet.h  lwipopts.h
examples/demo_ethernet_1g/: CMakeLists.txt  README.md  config.cmake  demo_ethernet_1g.c
examples/demo_ethernet_qos/: CMakeLists.txt  README.md  demo_ethernet_qos.c
examples/demo_flexcan/: CMakeLists.txt  README.md  config.cmake  demo_flexcan.c  demo_flexcan.h
examples/demo_gpio_led/: CMakeLists.txt  README.md  config.cmake  demo_gpio_led.c  demo_gpio_led.h
examples/demo_hello_world/: CMakeLists.txt  README.md  demo_hello_world.c
examples/demo_iot/: CMakeLists.txt  FreeRTOSConfig.h  README.md  config.cmake  demo_iot.c  demo_iot.h  iot.c  iot.h
examples/demo_rs485/: CMakeLists.txt  README.md  config.cmake  demo_rs485.c  demo_rs485.h
examples/demo_sdcard/: CMakeLists.txt  README.md  config.cmake  demo_sdcard.c  sdmmc_config.c  sdmmc_config.h
examples/demo_spi_flash/: CMakeLists.txt  README.md  demo_spi_flash.c  demo_spi_flash.h
examples/demo_usb/: CMakeLists.txt  README.md  config.cmake  demo_usb.c  demo_usb.h  host_msd_command.c  host_msd_command.h  usb_host_config.h
scripts/: .config  build.sh  generate_version.bat  generate_version.sh  prepare.sh
templates/: README.md  cmake-variants.yaml  launch.json  settings.json
